fixing gap styles

--- a/scss/contact/_contact_sales_department.scss
+++ b/scss/contact/_contact_sales_department.scss
@@ -44,10 +44,6 @@
       justify-content: space-between;
       background-color: $white;
       margin-bottom: 16px;
-      &:last-of-type {
-        width: 16.6%;
-        margin-right: 0;
-      }
       &__top {
         img {
           object-fit: contain;
@@ -162,7 +158,7 @@
 @media (max-width: 1500px) {
   .sales-department-box {
     &__row {
-      gap: 2%;
+      gap: 1%;
       &__col {
         width: calc(94% / 4);
         &:last-of-type {
